<resources>
    <string name="app_name">Pedidos Mobile</string>
    <string name="titleDialog">Acesso Restrito</string>
    <string name="acesso">Acessar Pedidos Mobile</string>
    <string name="positive">Ok</string>
    <string name="negative">Cancelar</string>
    <string name="login">Login</string>
    <string name="edtSenha">Senha</string>
    <string name="loginFail">Dados inválidos, favor verifique e tente novamente.</string>
    <string name="loginCancel">Logins Cancelado.</string>
    <string name="loginOK">Você está logado!</string>
    <string name="title_activity_menu_bebidas">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_add">Adicionar</string>
    <string name="txt_nome_pedido">Pedido:</string>
    <string name="txt_valor">Valor:</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_ok">OK</string>
    <string name="txt_observacao">Observação: </string>
    <string name="txt_quantidade">Qtd.</string>
    <string name="txt_valorTotal">Vlr.Total</string>
    <string name="txt_mesa">Mesa:</string>
    <string name="txt_garcom">Garçom:</string>
    <string name="definirTamanho">Favor selecione o tamanho.</string>
    <string name="pedidoCancel">Pedido Cancelado.</string>
    <string name="defenirTamanho">Definição</string>
    <string name="edit">Editar</string>
    <string name="delete">Remover</string>
    <string name="close">Fechar</string>
    <string name="titlePagamento">Pagamento</string>
    <string name="pagamentoCancel">Pagamento Cancelado.</string>//Botão Cancelar do ListaDialog
</resources>
