<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modulo_pedido_produto.activity.EditarProdutoActivity"
    android:layout_margin="@dimen/margem"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/txt_nome" />

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"/>

    //android:enabled="false"
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_valor"
        style="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/edt_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_quantidade"
        style="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edt_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_valorTotal"
        style="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/edt_valorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />
        //android:enabled="false"


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/txt_observacao" />

    <EditText
        android:id="@+id/edt_observacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelar"
            android:text="@string/btn_cancel" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="processar"
            android:text="@string/btn_ok" />
    </LinearLayout>

</LinearLayout>