<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modulo_usuario.EditarUsuarioActivity"
        android:layout_margin="@dimen/margem"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:background="@drawable/borda_vermelha">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/textAppearanceMedium"
            android:text="@string/login" />

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/textAppearanceMedium"
            android:text="@string/edtSenha" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelar"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btSalvarUsuario"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="processarUsuario"
            android:text="@string/btn_ok" />
    </LinearLayout>

</LinearLayout>
